[gd_scene load_steps=4 format=3 uid="uid://bn2ka4r6sripi"]

[ext_resource type="PackedScene" uid="uid://dwh0balk8ewml" path="res://scenes/terrain.tscn" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://bwepl27o677me" path="res://scenes/main.gd" id="1_sugp2"]
[ext_resource type="PackedScene" uid="uid://caj5v7gjs307a" path="res://scenes/hero.tscn" id="2_sugp2"]

[node name="main" type="Node2D"]
script = ExtResource("1_sugp2")

[node name="terrain" parent="." instance=ExtResource("1_0wfyh")]
scale = Vector2(1, 1.00653)

[node name="hero" parent="." instance=ExtResource("2_sugp2")]

[node name="skeSpawnTimer" type="Timer" parent="."]
wait_time = 0.45
autostart = true

[node name="orcsSpawnTimer" type="Timer" parent="."]

[node name="SpawnPoint" type="Node2D" parent="."]

[connection signal="timeout" from="skeSpawnTimer" to="." method="_on_ske_spawn_timer_timeout"]
[connection signal="timeout" from="orcsSpawnTimer" to="." method="_on_orcs_spawn_timer_timeout"]
